--- a/css/_broadcast.scss
+++ b/css/_broadcast.scss
@@ -390,21 +390,22 @@
                     flex-direction: column;
                 }
                 li {
-                    width: 65%;
+                    max-width: 65%;
                     padding: 10px;
+                    flex-shrink: 0;
                     position: relative;
-                    background-color: #fff;
+                    background-color: rgba(255, 255, 255, 0.7);
                     border-radius: 10px;
-                    opacity: 0.75;
+                    align-self: flex-start;
                     &.self {
-                        background-color: #EFFDDE;
+                        background-color: #effddeb4;
                         align-self: flex-end;
                         .chat_member {
                             text-align: right;        
                         }
                         &::before{
                             border-width: 7.5px 0 7.5px 13.0px;
-                            border-color: transparent transparent transparent #EFFDDE; 
+                            border-color: transparent transparent transparent #effddeb4; 
                             right: -13px;
                             left: unset;
                         }
@@ -416,7 +417,7 @@
                     height: 0;
                     border-style: solid;
                     border-width: 7.5px 13.0px 7.5px 0;
-                    border-color: transparent #fff transparent transparent;
+                    border-color: transparent rgba(255, 255, 255, 0.7) transparent transparent;
                     position: absolute;
                     top: 8px;
                     left: -13px;
@@ -433,42 +434,123 @@
                 font-size: 0.9rem;
                 color: #999;
             }
+            
             .chat_name {
                 padding-left: 5px;
             }
+
             .chat_ipt {
                 height: 60px;
                 display: flex;
                 align-items: center;
+                position: relative;
+                .chat_txt{
+                    width: 100%;
+                    height: 60px;
+                    border: 1px solid #333;
+                    border-radius: 5px;
+                    color: #000;
+                    display: flex;
+                    align-items: center;
+                    overflow: auto;  
+                    position: relative;  
+                }
                 .chat_msg {
                     width: 100%;
-                    height: 100%;
-                    padding: 0 10px;
-                    border-radius: 5px;
-                    border: 1px solid #333;
-                    font-size: 1.1rem;
+                    height: 22px;
+                    line-height: 22px;
+                    padding: 0 10px;  
+                    font-size: 1.2rem;  
+                }
+                .chat_take{
+                    padding-left: 10px;
+                    margin: auto;
+                    position: absolute;
+                    @include pos(tbl,0); 
+                    display: flex;
+                    align-items: center;
+                    color: #eb518c;
+                    pointer-events: none;
+                    font-size: 1.2rem;
                 }
                 .chat_color {
                     width: 45px;
                     height: 45px;
-                    margin-left: 10px;
                     flex-shrink: 0;
                     @include fullNone;
                     cursor: pointer;
-                    position: relative;
+                    position: relative;          
+                    &:hover::before{
+                        filter: grayscale(100%) sepia(100%);
+                    }
 
                     &::before{
                         content: '';
                         width: 100%;
                         height: 100%;
-                        background:#fff url(../images/select_color.png) no-repeat center / 60%;
+                        background:#fff url(../images/icon/chat_color.svg) no-repeat center / 80%;
                         background-color: #fff;
                         position: absolute;
                         top: 0;
                         left: 0;
+                        transition: .3s;
+                    }
+                }
+                .chat_iconBtn{
+                    width: 45px;
+                    height: 45px;
+                    margin: 0 5px;
+                    flex-shrink: 0;  
+                    cursor: pointer;         
+                    position: relative;
+                    &::before{
+                        content: '';
+                        width: 100%;
+                        height: 100%;
+                        background: url(../images/icon/chat_selectImg.svg) no-repeat center / 80%;
+                        position: absolute;
+                        top: 0;
+                        left: 0;
+                        transition: .3s;
+                    }
+                    &:hover::before{
+                        filter: grayscale(100%) sepia(100%);
+                    }
+                    &:hover .chat_iconList{
+                        display: block;
+                    }
+                }
+
+                .chat_iconList{
+                    width: 200px;
+                    padding: 10px;
+                    background-color: rgba(255, 255, 255, 0.7);
+                    border: 1px solid #999;
+                    position: absolute;
+                    right: 0;
+                    bottom: 60%;
+                    border-radius: 5px;
+                    box-shadow: 0px 2px 5px rgb(92, 92, 92) inset;
+                    display: none;
+                    ul{
+                        display: flex;
+                        flex-wrap: wrap;
+                    }
+                    li{
+                        width: calc(100%/5);
+                        padding: 2px;
+                        cursor: pointer;
+                    }
+                    .chat_icon{
+                        width: 2rem;
                     }
                 }
             }  
+        }
+        .chat_icon{
+            width: 1.25rem;
+            vertical-align: bottom;
+            background-color: transparent !important;
         }
         .chatAd {
             width: 300px;
