--- a/css/_resources.scss
+++ b/css/_resources.scss
@@ -97,11 +97,10 @@
             color: #000;
             font-size: 1.1rem;
             cursor: pointer;
-            & a> div,
-            & > div {
-                display: flex;
-                align-items: center;
-            }
+        }
+        .lottoryTb_list {
+            display: flex;
+            align-items: center;
         }
         .lottoryTb-img {
             max-width: 70px;
