--- a/css/_page.scss
+++ b/css/_page.scss
@@ -326,7 +326,7 @@
         .newsList_img {
             height: 0;
             padding-bottom: 65%;
-            background: no-repeat center/cover;
+            background: no-repeat center top/cover;
         }
     }
 }
