--- a/css/_member.scss
+++ b/css/_member.scss
@@ -23,11 +23,13 @@
         font-size: 1.2rem;
         ul{
             display: flex;
-            flex-wrap: wrap;
+            flex-direction: column;
+            align-items: center;
         }
         li{
-            width: 50%;
-            padding: 10px 40px;
+            width: 100%;
+            max-width: 550px;
+            padding: 15px 0;
             display: flex;
             align-items: center;
         }
@@ -39,12 +41,19 @@
         @at-root .mbrl_content{
             width: 100%;
         }
-        @at-root .mbrl_ipt{
+
+        @at-root .mbrl_ipt,.mbrl_txt{
+            padding-right: 30px;
+            position: relative;
+        }
+
+        @at-root .mbrl_ipt,.mbrl_date{
             width: 100%;
             height: 40px;
-            border: 1px solid #b5b5b5;
+            border: 1px solid #cfcfcf;
             border-radius: 5px;
-            box-shadow: 2px 2px 4px #999 inset;
+
+            box-shadow: 2px 2px 4px rgb(192, 192, 192) inset;
             input{
                 width: 100%;
                 height: 100%;
@@ -57,21 +66,58 @@
                     color: #9e9d9d;
                 }
             }
+            @at-root .icon_pwdLook{
+                width: 18px;
+                height: 15px;
+                margin: auto;
+                background: url(../images/icon/look_off.svg) no-repeat center /cover;
+                cursor: pointer;
+                position: absolute;
+                @include pos(tbr,0,0,10px);
+                &.on{
+                    background-image: url(../images/icon/look_on.svg);
+                }
+            }
         }
 
         @at-root .mbrl_txt{
+            width: 100%;
             padding-left: 5px;
+            @at-root .icon_refresh{
+                width: 18px;
+                height: 18px;
+                margin: auto;
+                background: url(../images/icon/refresh.svg) no-repeat center /cover;
+                cursor: pointer;
+                cursor: pointer;
+                position: absolute;
+                @include pos(tbr,0,0,10px);
+            }
         }
 
         @at-root .mbrl_radio{
+            label+label{
+                margin-left: 30px;
+            }
             input{
                width: 20px;
                height: 20px;
                position: relative;
+               &::before{
+                   content: '';
+                   width: 100%;
+                   height: 100%;
+                   background: url(../images/icon/radio_off.png)no-repeat center/cover;
+                   position: absolute;
+                   @include pos(tbrl,0);
+               }
+               &:checked::before{
+                   background-image: url(../images/icon/radio_on.png);
+               }
             }
         }
     }
-
+    
     @at-root .mbrbtn{
         display: flex;
         justify-content: center;
@@ -84,5 +130,8 @@
             margin-left: 10px;
         }
     }
+
+
+
 }
 
